--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mycontacts-backend-api",
+  "name": "mydance-moves-backend-api",
   "version": "1.0.0",
-  "description": "This is an express project for my contacts backend api",
+  "description": "This is an express project for my dance-moves backend api",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
