--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "Nicholas Fray",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-async-handler": "^1.2.0"
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^7.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
